--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Jonathan (Wiggy)
 logo: /assets/image.png
 #description
 show_downloads: true
-theme: jekll-theme-minimal
+theme: jekyll-theme-minimal
