--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jonathan (Wiggy)
-logo: /assets/image.png
+logo: /assets/histogram-example-2.png
 #description
 show_downloads: true
 theme: jekyll-theme-minimal
