--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,15 @@ logo: /assets/histogram-example-2.png
 #description
 show_downloads: true
 theme: jekyll-theme-slate
+
+page-col: "#FFFFFF"
+text-col: "#404040"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+navbar-col: "#EAEAEA"
+navbar-text-col: "#404040"
+navbar-border-col: "#DDDDDD"
+footer-col: "#EAEAEA"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
+footer-hover-col: "#0085A1"
