--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jonathan (Wiggy)
 logo: /assets/histogram-example-2.png
 #description
 show_downloads: true
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 
 page-col: "#FFFFFF"
 text-col: "#404040"
