--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Jonathan (Wiggy)
 logo: /assets/histogram-example-2.png
 #description
 show_downloads: true
-theme: jekyll-theme-hydejack
+theme: jekyll-theme-minimal
