--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ logo: /assets/histogram-example-2.png
 #description
 show_downloads: true
 theme: jekyll-theme-Tactile
-background_color: '#999'
+#background_color: '#999'
 
