--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Jonathan (Wiggy)
 logo: /assets/histogram-example-2.png
 #description
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-Modernist
 #background_color: '#999'
 
