--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,6 @@
-remote_theme: pages-themes/minimal@v0.2.0
-
-
 title: Jonathan (Wiggy)
 logo: /assets/histogram-example-2.png
 #description
 show_downloads: true
-#theme: jekyll-theme-minimal
-sass:
-  sass_dir: _sass
-  style: compressed
+theme: jekyll-theme-minimal
 
