--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jon Goundry
-logo: /assets/histogram-example-2.png
+logo: /assets/JGHeadshot.png
 #description
 show_downloads: true
 theme: jekyll-theme-minimal
