--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,8 @@ title: Jon Goundry
 logo: /assets/JGHeadshot2.png
 #description
 show_downloads: true
+
+![pyramidofneeds](assets/pyramid.png) 
+
 theme: jekyll-theme-minimal
 
